--- a/doc/统一内容接口.md
+++ b/doc/统一内容接口.md
@@ -11,14 +11,18 @@
 * updated 抓取更新时间
 
 ###配置模型
+* config_native 上游应用原型配置
 * config_plugin 抓取插件配置
 * config_period 抓取周期
 * config_flow 抓取后触发流程
 
 ###站点质量模型
+* site_status 站点状态
 * content_count 站点内容数
+* site_quantity 站点质量
 * growth_rate 内容增长率
 * fetch_count 抓取次数
+* fetch_error_count 抓取失败次数
 * fetch_avetime 抓取平均耗时
 * flow_avetime 处理流程平均耗时
 
@@ -28,6 +32,7 @@
 * content_id  内容唯一标识
 * site_id 源唯一标识
 * title 标题
+* image 内容图片
 * desc 内容描述
 * content 内容
 * theme 源主题分类
@@ -57,6 +62,7 @@
 * author_avatar 作者头像地址
 
 ###质量模型
+* content_status 内容状态
 * view_count 查看数
 * comment_count 评论数量
 * view_avetime 平均浏览时间
