--- a/doc/统一内容接口.md
+++ b/doc/统一内容接口.md
@@ -64,6 +64,7 @@
 ###质量模型
 * content_status 内容状态
 * view_count 查看数
+* collect_count 收藏数
 * comment_count 评论数量
 * view_avetime 平均浏览时间
 * class_accuracy 分类精确度
